# Laikipia-student-s-portal-rust-server

./: Cargo.toml  README.md
migrations/2024-09-03-162812_init/: up.sql
migrations/2024-09-03-172743_init_1/: down.sql  up.sql
migrations/2024-09-03-173249_init_2/: up.sql
migrations/2024-09-04-051811_sign_up/: down.sql  up.sql
migrations/2024-09-04-061726_students_information/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/sign_up/: first_years_init.rs  get_data.rs  mod.rs
