[package]
name = "LaikipiaPortal"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
diesel = { version = "2.2.3", features = ["postgres"] }
dotenvy = "0.15.7"
json = "0.12.4"
serde = { version = "1.0.209", features = ["derive"] }
validator = { version = "0.18.1", features = ["derive"] }
